<resources>
    <string name="app_name">PICKY</string>

    <!-- Main -->
    <string name="beginner_mode">Normal Mode</string>
    <string name="expert_mode">1-minute mode</string>
    <string name="tutorial">Rules</string>
    <string name="coming_soon">Coming soon!</string>

    <!-- Game -->
    <string name="set">Set</string>
    <string name="sets">Sets</string>
    <string name="set_available">set available</string>
    <string name="sets_available">sets available</string>

    <string name="check_your_sets">Check\nyour sets</string>

    <string name="redirect">Shuffling!</string>

    <!-- loading -->
    <string name="loading">loading ...</string>

    <!-- Tutorial  -->
    <string name="color_u"><u>Color</u></string>
    <string name="pattern_u"><u>Pattern</u></string>
    <string name="number_u"><u>Number</u></string>
    <string name="symbol_u"><u>Shape</u></string>
    <string name="_2023_mousehouse">ⓒ 2023 MouseHouse.</string>

    <string name="tutorial_description">Choose 3 out of 12 cards\nA Card consists of 4 elements.</string>

    <string name="color_detail">The colors on the three cards must all be the same or all be different.</string>
    <string name="pattern_detail">The patterns on the three cards must all be the same or all be different.</string>
    <string name="number_detail">The numbers on the three cards must all be the same or all be different.</string>
    <string name="symbol_detail">The shapes on the three cards must all be the same or all be different.</string>

    <string name="btn_next">NEXT</string>
    <string name="btn_prev">PREV</string>
    <string name="btn_done">DONE</string>

    <!-- dialog -->
    <string name="dialog_exit">Do you want to exit\nthe Set game?</string>
    <string name="dialog_exit_button1">Exit</string>
    <string name="dialog_exit_button2">Stay</string>
    <string name="dialog_exit_button3"></string>

    <string name="dialog_finish">You found All Set!</string>
    <string name="dialog_finish_button1">Exit</string>
    <string name="dialog_finish_button2">Again</string>
    <string name="dialog_finish_button3"></string>

    <string name="dialog_ready">Comming Soon!</string>
    <string name="dialog_ready_button1"></string>
    <string name="dialog_ready_button2"></string>
    <string name="dialog_ready_button3">Close</string>

    <string name="found_not_supported">You\ncan\ndo\nbetter!</string>

    <string name="seconds">seconds left</string>
    <string name="dialog_finish_minute_mode_1">You found </string>
    <string name="dialog_finish_minute_mode_2"> Sets!</string>
    <string name="dialog_finish_minute_mode_2_1"> Set!</string>
    <string name="found">Found</string>

    <string name="game_mode_name_1">Normal</string>
    <string name="game_mode_name_2">1-minute</string>


    <string name="finish">Finish</string>
</resources>