<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_background"
    tools:context=".game.GameActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back"
        app:srcCompat="@drawable/picky" />

    <TextView
        android:id="@+id/txt_mode_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_mode_name_1"
        android:textAppearance="@style/game_mode_name"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyt_game_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_board"
        app:layout_constraintEnd_toEndOf="@id/fragment_container_board"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/txt_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:height="60dp"
            android:includeFontPadding="false"
            android:text="@string/set"
            android:textAppearance="@style/game_set_title"
            app:fontFamily="@font/poppins_semibold" />


        <TextView
            android:id="@+id/txt_exist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_available"
            android:textAppearance="@style/game_set_subtitle"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_seconds_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60 "
                android:textAppearance="@style/game_seconds_1"
                app:fontFamily="@font/poppins_bold" />

            <TextView
                android:id="@+id/txt_seconds_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/seconds"
                android:textAppearance="@style/game_seconds_2"
                app:fontFamily="@font/poppins_regular" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_board"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_sets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_found"
        android:name="com.daisy.picky.found.FoundFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_reload"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="13dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/reload" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sets"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_found"
        android:paddingTop="2dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:scaleType="fitCenter"
        android:text="@string/found"
        android:textAllCaps="false"
        android:textAppearance="@style/found_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/btn_found" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_loading"
        android:name="com.daisy.picky.LoadingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>