<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_background"
    tools:context=".tutorial.FirstFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/color_u"
            android:textAppearance="@style/rules_element_title_u"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_color_1"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_1_1"
            app:layout_constraintEnd_toStartOf="@+id/img_color_2"
            app:layout_constraintTop_toTopOf="@+id/txt_color" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_color_2"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_1_2"
            app:layout_constraintEnd_toStartOf="@+id/img_color_3"
            app:layout_constraintTop_toTopOf="@+id/txt_color" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_color_3"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/tutorial_1_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/pattern_u"
            android:textAppearance="@style/rules_element_title_u"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_color" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pattern_1"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_2_1"
            app:layout_constraintEnd_toStartOf="@+id/img_pattern_2"
            app:layout_constraintTop_toTopOf="@+id/txt_pattern" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pattern_2"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_2_2"
            app:layout_constraintEnd_toStartOf="@+id/img_pattern_3"
            app:layout_constraintTop_toTopOf="@+id/txt_pattern" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pattern_3"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/tutorial_2_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_pattern" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/number_u"
            android:textAppearance="@style/rules_element_title_u"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pattern" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_number_1"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_3_1"
            app:layout_constraintEnd_toStartOf="@+id/img_number_2"
            app:layout_constraintTop_toTopOf="@+id/txt_number" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_number_2"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_3_2"
            app:layout_constraintEnd_toStartOf="@+id/img_number_3"
            app:layout_constraintTop_toTopOf="@+id/txt_number" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_number_3"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/tutorial_3_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/symbol_u"
            android:textAppearance="@style/rules_element_title_u"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_number" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_symbol_1"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_4_1"
            app:layout_constraintEnd_toStartOf="@+id/img_symbol_2"
            app:layout_constraintTop_toTopOf="@+id/txt_symbol" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_symbol_2"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tutorial_4_2"
            app:layout_constraintEnd_toStartOf="@+id/img_symbol_3"
            app:layout_constraintTop_toTopOf="@+id/txt_symbol" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_symbol_3"
            android:layout_width="53dp"
            android:layout_height="100dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/tutorial_4_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_symbol" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>